# sqlighter

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  codecov.yml  cover.sh  leaks.sh  run_cover.sh  test.sh  test_cover.sh  test_n_cover.sh
.github/workflows/: build_and_test.yml  linux_build_and_test.yml  mac_build_and_test.yml  win_build.yml  win_build_and_test.yml  windows_build_and_test.yml
Source/: CMakeLists.txt
Source/cmake/: CMakeLists.txt  gtest.cmake  sqlite.cmake  version.cmake
Source/sqlighter/: CMakeLists.txt  sqlighter.cpp  sqlighter.h  sqlighter_version.h.in
Source/sqlighter/base/connection/: IConnection.cpp  IConnection.h
Source/sqlighter/base/connectors/: ICMD.cpp  ICMD.h  ICMDDirect.h  ICMDSelect.h  connector_utils.h
Source/sqlighter/connection/: Connection.cpp  Connection.h
Source/sqlighter/connectors/: CMDCreateTable.cpp  CMDCreateTable.h  CMDDelete.cpp  CMDDelete.h  CMDDirect.cpp  CMDDirect.h  CMDDrop.cpp  CMDDrop.h  CMDInsert.cpp  CMDInsert.h  CMDSelect.cpp  CMDSelect.h  CMDUpdate.cpp  CMDUpdate.h  Clause.cpp  Clause.h  query_utils.cpp  query_utils.h
Source/sqlighter/connectors/Clause/: Clause.cpp  Clause.h  ClauseContainer.cpp  ClauseContainer.h  ClauseFrom.h  ClauseJoin.h  ClauseLimit.cpp  ClauseLimit.h  ClauseOrderBy.cpp  ClauseOrderBy.h  ClauseSet.cpp  ClauseSet.h  ClauseTable.cpp  ClauseTable.h  ClauseWhere.cpp  ClauseWhere.h
Source/sqlighter/consts/: ColumnType.h  OrderBy.h  const_cast.cpp  const_cast.h
Source/sqlighter/core/: BindValue.cpp  BindValue.h  Binds.h  DB.cpp  DB.h  ScalarValue.cpp  ScalarValue.h  Stmt.cpp  Stmt.h  StmtGuard.cpp  StmtGuard.h  blob.h
Source/sqlighter/exceptions/: error_codes.h  error_message.cpp  error_message.h  sqlighter_exceptions.cpp  sqlighter_exceptions.h
Source/tests/: CMakeLists.txt  main.cpp  sqlighter_test.cpp
Source/tests/base/connection/: IConnection_test.cpp
Source/tests/connection/: Connection_test.cpp
Source/tests/connectors/: CMDCreateTable_test.cpp  CMDDelete_test.cpp  CMDDirect_test.cpp  CMDDrop_test.cpp  CMDInsert_test.cpp  CMDSelect_test.cpp  CMDUpdate_test.cpp  Clause_test.cpp
Source/tests/connectors/Clause/: ClauseSet_test.cpp  Clause_test.cpp
Source/tests/consts/: const_cast_test.cpp
Source/tests/core/: BindValue_test.cpp  DB_test.cpp  ScalarValue_test.cpp  Stmt_test.cpp
Source/tests/exceptions/: SQLighterException_test.cpp  error_message_test.cpp
Source/tests/test_core/: connection_override.cpp  connection_override.h  db_mock.cpp  db_mock.h
Source/tests/test_core/.db/: mock_db.db
scripts/: leak_check.sh  test.sh  test_cover.sh
scripts/linux/: test_cover.sh
scripts/win/: test.bat
src/cmake/: env.cmake  gtest.cmake  sqlite.cmake  version.cmake
src/sqlighter/: CMakeLists.txt  sqlighter.cpp  sqlighter.h
src/sqlighter/base/connection/: IConnection.h
src/sqlighter/base/connectors/: CMD.cpp  CMD.h  ICMD.cpp  ICMD.h  Prepared.cpp  Prepared.h  PreparedCMD.cpp  PreparedCMD.h
src/sqlighter/connection/: Connection.cpp  Connection.h
src/sqlighter/connectors/: CMDCreateTable.h  CMDDelete.cpp  CMDDelete.h  CMDDirect.h  CMDDrop.cpp  CMDDrop.h  CMDInsert.h  CMDSelect.cpp  CMDSelect.h  CMDUpdate.h  query_utils.cpp  query_utils.h
src/sqlighter/connectors/Clause/: ClauseSet.h  ClauseTable.cpp  ClauseTable.h
src/sqlighter/consts/: const_cast.h
src/sqlighter/core/: Stmt.cpp  Stmt.h  StmtRef.cpp  StmtRef.h  blob.h  stmt_ptr.cpp  stmt_ptr.h  unique_stmt_ptr.h
src/sqlighter/exceptions/: error_codes.h  error_message.cpp  error_message.h  sqlighter_exceptions.cpp  sqlighter_exceptions.h
src/tests/: CMakeLists.txt  main.cpp
src/tests/base/connection/: IConnection_test.cpp
src/tests/connectors/: CMDCreateTable_test.cpp  CMDDrop_test.cpp  CMDInsert_test.cpp  CMDSelect_test.cpp  query_utils_test.cpp
src/tests/connectors/Clause/: ClauseSet_test.cpp  Clause_test.cpp
src/tests/core/: DB_test.cpp
src/tests/exceptions/: SQLighterException_test.cpp  error_message_test.cpp
src/tests/test_core/: connection_override.cpp  connection_override.h  db_mock.cpp
